adding citation card

--- a/gudmap/index.html
+++ b/gudmap/index.html
@@ -16,7 +16,7 @@ custom_js:
 -->
   <div class="col-sm-12 col-md-12 gud-cards">
 
-        <div class="col-sm-12 col-md-4">
+        <div class="col-sm-12 col-md-3">
           <div class="panel panel-default">
             <div class="panel-body">
               <h3><a href="https://informatics-isi-edu.github.io/atlas-d2k-docs/docs/querying-the-atlas-d2k-data-browser/" target="_blank">How to Query Data</a></h3>
@@ -25,16 +25,25 @@ custom_js:
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-4">
+        <div class="col-sm-12 col-md-3">
           <div class="panel panel-default">
             <div class="panel-body">
-              <h3><a href="/tutorials/">GU Tutorials</a></h3>
-              <a href="/tutorials/"><img class="media-object" src="/assets/img/tutorials/TS21_WMISH_Mventral_crop.jpg" alt="urogenital system at approximately TS21"></a>
+              <h3><a href="/tutorials/">Tutorials</a></h3>
+              <a href="/tutorials/"><img class="media-object" src="/assets/img/tutorials/TS21_WMISH_Mventral_crop.jpg" alt="urogenital system at approximately TS21" height="150"></a>
 
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-4">
+        <div class="col-sm-12 col-md-3">
+          <div class="panel panel-default">
+            <div class="panel-body">
+              <h3><a href="/gudmap/citing-gudmap/">How to Cite GUDMAP Data</a></h3>
+            <a href="/gudmap/citing-gudmap/">
+              <img class="media-object" src="/assets/img/citing-thumb.png" alt="Quotation mark to indicate a citation"></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-3">
           <div class="panel panel-default">
             <div class="panel-body">
               <h3><a href="/resources/">Resources</a></h3>
